<resources>
    <string name="app_name">SearchTicket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Скоро здесь будет много полезной информации</string>
    <string name="back">Назад</string>
    <string name="button_back_country">button_back_country</string>
    <string name="button_swap_country">button_swap_country</string>
    <string name="button_cancel_edit">button_cancel_edit</string>
    <string name="to_back">+ обратно</string>
    <string name="_1_econom">1, эконом</string>
    <string name="filter">фильтр</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="point2">point2</string>
    <string name="point1">point1</string>
    <string name="point3">point3</string>
    <string name="look_tickets">Посмотреть все билеты</string>
    <string name="notification">notification</string>
    <string name="subscription">Подписка на цену</string>
    <string name="search_tickets">Поиск дешевых\nавиабилетов</string>
    <string name="image_search">search</string>
    <string name="music_fly">Музыкально отлететь</string>
    <string name="image1">image1</string>
    <string name="image_avia1">image_avia1</string>
    <string name="image2">image2</string>
    <string name="image_avia2">image_avia2</string>
    <string name="image3">image3</string>
    <string name="image_avia3">image_avia3</string>
    <string name="image_takeoff">image_takeoff</string>
    <string name="image_search2">image_search2</string>
    <string name="from">Откуда - Москва</string>
    <string name="to">Куда - Турция</string>
    <string name="button_cancel_edit2">button_cancel_edit2</string>
    <string name="image_route">image_route</string>
    <string name="image_route2">image_route2</string>
    <string name="image_route3">image_route3</string>
    <string name="image_route4">image_route4</string>
    <string name="difficult_route">Сложный\nмаршрут</string>
    <string name="anywhere">Куда угодно</string>
    <string name="weekend">Выходные</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="image_stambul">image_stambul</string>
    <string name="stambul">Стамбул</string>
    <string name="pop_route">Популярное направление</string>
    <string name="image_sochi">image_sochi</string>
    <string name="sochi">Сочи</string>
    <string name="image_phuket">image_phuket</string>
    <string name="phuket">Пхукет</string>
    <string name="image_back">image_back</string>
    <string name="graphic">График цен</string>
    <string name="image_point">image_point</string>
    <string name="tickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="shorter">Короче</string>
    <string name="subscrib">Подписки</string>
    <string name="profile">Профиль</string>
</resources>