<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/aviaTicket"
        android:icon="@drawable/avia_24"
        android:orderInCategory="1"
        android:title="@string/tickets" />
    <item
        android:id="@+id/hotels"
        android:icon="@drawable/hotel_24"
        android:orderInCategory="2"
        android:title="@string/hotels" />
    <item
        android:id="@+id/shorter"
        android:icon="@drawable/shorter_24"
        android:orderInCategory="3"
        android:title="@string/shorter" />
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/notifications_24"
        android:orderInCategory="4"
        android:title="@string/subscrib" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/person_24"
        android:orderInCategory="5"
        android:title="@string/profile" />
</menu>