<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TicketsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_before_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray1">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:backgroundTint="@color/gray1"
                android:contentDescription="@string/image_back"
                android:src="@drawable/back_24"
                app:layout_constraintBottom_toBottomOf="@id/text_info_data_passenger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_info_flight"
                app:tint="@color/blue" />

            <TextView
                android:id="@+id/text_info_flight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/gray1"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/image_back"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Moscow - Sochi" />

            <TextView
                android:id="@+id/text_info_data_passenger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/gray1"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/text_info_flight"
                app:layout_constraintTop_toBottomOf="@id/text_info_flight"
                tools:text="23 feb, 1 passenger" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tickets"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_before_rv"
        tools:listitem="@layout/item_ticket" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@color/blue"
            android:text="@string/filter"
            android:textStyle="italic"
            app:icon="@drawable/filter_24" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="-34dp"
            android:backgroundTint="@color/blue"
            android:text="@string/graphic"
            android:textStyle="italic"
            app:icon="@drawable/graphic_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>